# tempo

./: .envrc  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.bench  Justfile  audit_diff_summary.md  metrics_comparison.md  metrics_feature.json  metrics_main.json  reth-bench-compare.sh  reth_bench_compare.py  tempo_benchmark_analysis.md  typos.toml
.github/: dependabot.yml
.github/workflows/: build.yml  docs.yml  invariant-deep.yml  rust.yml  specs.yml  test.yml
contrib/infra/kubernetes/: Justfile
contrib/infra/terraform/: root.hcl
crates/alloy/: Cargo.toml  README.md
crates/alloy/src/: lib.rs
crates/alloy/src/rpc/: compat.rs  request.rs
crates/bridge/contracts/: README.md  foundry.toml
crates/bridge/contracts/src/: Bridge.sol  TokenBridge.sol
crates/bridge/relayer/: Cargo.toml
crates/bridge/relayer/src/: ethereum.rs  main.rs  proofs.rs  relayer.rs  tempo.rs
crates/chainspec/src/: hardfork.rs  spec.rs
crates/commonware-node/: Cargo.toml
crates/commonware-node-config/: Cargo.toml
crates/commonware-node-config/src/: encryption.rs  lib.rs  tests.rs
crates/commonware-node/src/: args.rs  chainspec.rs  cli.rs  execution.rs  lib.rs  reth_glue.rs  util.rs
crates/commonware-node/src/consensus/: block.rs  engine.rs  execution_driver.rs
crates/commonware-node/src/consensus/application/: actor.rs
crates/commonware-node/src/dkg/: mod.rs
crates/commonware-node/src/dkg/ceremony/: mod.rs  persisted.rs
crates/commonware-node/src/dkg/manager/: actor.rs  ingress.rs  mod.rs  validators.rs
crates/commonware-node/src/dkg/manager/actor/: mod.rs  post_allegretto.rs  pre_allegretto.rs
crates/commonware-node/src/dkg/manager/actor/state/: mod.rs
crates/commonware-node/src/epoch/manager/: actor.rs  ingress.rs
crates/commonware-node/src/execution/: consensus_validator.rs  evm.rs
crates/commonware-node/src/feed/: state.rs
crates/consensus/src/: lib.rs
crates/contracts/: Cargo.toml
crates/contracts/src/precompiles/: account_keychain.rs  mod.rs  result.rs  tip20.rs  tip20_factory.rs  tip403_registry.rs
crates/dkg-onchain-artifacts/: Cargo.toml
crates/dkg-onchain-artifacts/src/: lib.rs
crates/e2e/: Cargo.toml
crates/e2e-tests/src/: utils.rs
crates/e2e/src/: execution_runtime.rs  lib.rs  testing_node.rs
crates/e2e/src/tests/: backfill.rs  dkg.rs  linkage.rs  mod.rs  restart.rs  subblocks.rs
crates/evm/: Cargo.toml
crates/evm/src/: block.rs  evm.rs  lib.rs
crates/eyre/src/: lib.rs
crates/faucet/src/: args.rs  faucet.rs
crates/native-bridge/: AGENTS.md  Cargo.toml
crates/native-bridge/contracts/: .gitignore  foundry.toml
crates/native-bridge/contracts/src/: BLS12381.sol  MessageBridge.sol
crates/native-bridge/contracts/test/: BLS12381.t.sol  MessageBridge.t.sol
crates/native-bridge/docs/: BLS_VARIANT_COMPATIBILITY.md  E2E_TESTS.md
crates/native-bridge/src/: attestation.rs  config.rs  eip2537.rs  error.rs  lib.rs  message.rs  service.rs  signer.rs
crates/native-bridge/src/sidecar/: aggregator.rs  mod.rs  submitter.rs  watcher.rs
crates/native-bridge/tests/: bls_fuzz.rs  bridge_e2e.rs
crates/node/: Cargo.toml
crates/node/src/: node.rs
crates/node/src/rpc/: mod.rs
crates/node/tests/it/: account_abstraction.rs  base_fee.rs  block_building.rs  eth_call.rs  eth_transactions.rs  liquidity.rs  payment_lane.rs  stablecoin_dex.rs  tempo_transaction.rs  tip20.rs  tip20_factory.rs  tip20_gas_fees.rs  tip_fee_amm.rs  tip_fee_manager.rs  utils.rs
crates/payload/types/src/: lib.rs
crates/precompiles/: Cargo.toml
crates/precompiles-macros/: Cargo.toml
crates/precompiles-macros/src/: composition.rs  dispatcher.rs  interface.rs  layout.rs  lib.rs  packing.rs  storable.rs  storable_primitives.rs  storage.rs  traits.rs  utils.rs
crates/precompiles-macros/src/interface/: mod.rs
crates/precompiles-macros/src/solidity/: common.rs  dispatch.rs  enum_gen.rs  enums.rs  interface.rs  mod.rs  (+6 more)
crates/precompiles-macros/tests/: eip712.rs  interface.rs  layout.rs  macro_tests.rs  parity_tests.rs  storable.rs  storage.rs
crates/precompiles/benches/: tempo_precompiles.rs
crates/precompiles/src/: error.rs  lib.rs  test_util.rs
crates/precompiles/tests/: composition.rs  test_transient_storage.rs
crates/primitives/: Cargo.toml
crates/revm/: Cargo.toml
crates/revm/src/: block.rs  common.rs  error.rs  evm.rs  gas_params.rs  handler.rs  lib.rs  utils.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: eth.rs
crates/transaction-pool/src/: cache.rs  lib.rs  maintain.rs  tempo_pool.rs  transaction.rs  tt_2d_pool.rs  validator.rs
docs/: middleware.ts  package.json  pnpm-lock.yaml  reth-helper-type-proposal.md  tsconfig.json  vercel.json  vocs.config.tsx
docs/api/og/: route.tsx
docs/components/guides/: Demo.tsx
docs/pages/: index.mdx
docs/pages/guide/: _template.mdx  local-benchmarking.mdx
docs/pages/guides/: index.mdx
docs/pages/learn/: index.mdx  partners.mdx  stablecoins.mdx
docs/pages/protocol/: index.mdx
docs/pages/quickstart/: connection-details.mdx  developer-tools.mdx  evm-compatibility.mdx  faucet.mdx  integrate-tempo.mdx  predeployed-contracts.mdx  tip20.mdx
docs/pages/sdk/: index.mdx
docs/scripts/: generate-seo-metadata.ts  test-og-images.ts  vite-plugin-og-image.ts  vite-plugin-seo-metadata.ts
docs/specs/: TIP-DEX-MIN-ORDER.md  foundry.toml
docs/specs/bugs/: BUG-001-oversized-initcode.md  BUG-002-tip20-invalid-token-panic.md
docs/specs/src/: TIP20.sol
docs/specs/test/: FeeAMM.t.sol  StablecoinExchange.t.sol  TempoTransactionInvariant.t.sol
python_analysis/scripts/: bench_and_kill.py  reth_bench_compare.py
reth-bench-compare/: README.md
scripts/: get-epoch.sh
scripts/storage/: compare_constants.sh
src/: block.rs  cli.rs  context.rs  height.rs  lib.rs  provider.rs  types.rs  utils.rs
src/app/: mod.rs  node.rs  run.rs  state.rs
src/consensus/: mod.rs
tips/: tip-1009.mdx  tip-yyyy.md
tips/ref-impls/: foundry.toml
xtask/: Cargo.toml
xtask/src/: consensus_config.rs  devnet.rs  generate_devnet.rs  generate_localnet.rs  generate_state_bloat.rs  genesis.rs  genesis_args.rs  main.rs
(+503 files in other folders)
