[package]
name = "reth-malachite"
version = "0.1.0"
edition = "2021"

[lib]
name = "reth_malachite"
path = "src/lib.rs"

[[bin]]
name = "reth-malachite"
path = "src/bin/reth-malachite.rs"

[dependencies]
# Core dependencies
anyhow = "1.0.98"
bytes = "1.8"
clap = { version = "4.5", features = ["derive"] }
eyre = "0.6.12"
hex = "0.4"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1"

# Reth dependencies
reth = { git = "https://github.com/paradigmxyz/reth", branch = "main", package = "reth" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", branch = "main", package = "reth-chainspec" }
reth-cli = { git = "https://github.com/paradigmxyz/reth", branch = "main", package = "reth-cli" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth", branch = "main", package = "reth-cli-commands" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", branch = "main", package = "reth-cli-util" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", branch = "main", package = "reth-consensus" }
reth-db = { git = "https://github.com/paradigmxyz/reth", branch = "main", package = "reth-db" }
reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth", branch = "main", package = "reth-ethereum-engine-primitives" }
reth-ethereum-forks = { git = "https://github.com/paradigmxyz/reth", branch = "main", package = "reth-ethereum-forks" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", branch = "main", package = "reth-ethereum-primitives" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", branch = "main", package = "reth-execution-types" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", branch = "main", package = "reth-node-builder", features = ["test-utils"] }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", branch = "main", package = "reth-node-core" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", branch = "main", package = "reth-node-ethereum" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", branch = "main", package = "reth-payload-primitives" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", branch = "main", package = "reth-primitives" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", branch = "main", package = "reth-primitives-traits" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", branch = "main", package = "reth-provider" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", branch = "main", package = "reth-rpc-builder" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", branch = "main", package = "reth-rpc-eth-api" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", branch = "main", package = "reth-storage-api" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", branch = "main", package = "reth-tasks" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", branch = "main", package = "reth-tracing" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth", branch = "main", package = "reth-trie-db" }

# Alloy dependencies
alloy = { version = "1.0.9", default-features = false }
alloy-consensus = "1.0.9"
alloy-eips = "1.0.9"
alloy-genesis = "1.0.9"
alloy-primitives = "1.0.9"

# Malachite dependencies
malachitebft-app-channel = { git = "https://github.com/informalsystems/malachite", branch = "no-dns", package = "informalsystems-malachitebft-app-channel" }
malachitebft-core-types = { git = "https://github.com/informalsystems/malachite", branch = "no-dns", package = "informalsystems-malachitebft-core-types" }

[patch.crates-io]
libp2p-dns = { git = "https://github.com/informalsystems/rust-libp2p.git", branch = "reth" }