[package]
name = "tempo-commonware-node-config"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
blake3.workspace = true
chacha20poly1305.workspace = true
commonware-codec.workspace = true
commonware-cryptography.workspace = true
const-hex.workspace = true
derive_more = { workspace = true, features = ["debug"] }
indexmap = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
commonware-utils.workspace = true
rand.workspace = true
