[package]
name = "tempo-commonware-node"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
tempo-commonware-node-config.workspace = true
tempo-commonware-node-cryptography.workspace = true

sequential-futures-queue.workspace = true

alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-genesis.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rlp.workspace = true

bytes.workspace = true
camino.workspace = true
clap = "4.5.45"

commonware-broadcast.workspace = true
commonware-codec.workspace = true
commonware-consensus.workspace = true
commonware-cryptography.workspace = true
commonware-p2p.workspace = true
commonware-resolver.workspace = true
commonware-runtime.workspace = true
commonware-utils.workspace = true

eyre.workspace = true
futures-channel = "0.3.31"
futures-util = "0.3.31"
governor = "0.6.3"
maplit = "1.0.2"
rand.workspace = true
serde.workspace = true
serde_json = "1.0.142"
thiserror = "2.0.14"
tokio = { version = "1.47.1", default-features = false, features = ["macros", "sync"] }
tracing-subscriber = "0.3.19"

reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }

tracing = "0.1.41"
pin-project-lite = "0.2.16"
