[package]
name = "tempo-bridge-relayer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
alloy = { workspace = true, features = ["full", "json-rpc", "rpc-types", "provider-http", "signer-local"] }
alloy-primitives = { workspace = true, features = ["std", "serde"] }
alloy-sol-types = { workspace = true }

tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
clap = { workspace = true, features = ["derive", "env"] }
hex = { workspace = true }
jsonrpsee = { workspace = true, features = ["client", "async-client"] }

[lints]
workspace = true
